--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -25,7 +25,7 @@ on:
 #    types: started
 
 env:
-  REPO_URL: https://git.openwrt.org/openwrt/openwrt.git
+  REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: OpenWrt 19.07
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
